--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 tqdm
 langchain
+langchain-core
+langchain-community
+langchain-openai
+langchain-chroma
 javascript
 setuptools
-openai
+openai>=1.0.0
 chardet
 cchardet
-chromadb==0.3.29
+chromadb
 tiktoken
 requests
-setuptools
 gymnasium
 psutil
 minecraft_launcher_lib
