--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,19 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
+# Need changes api key
+run_voyager_advanced.py
+run_voyager_basic.py
+run_voyager_deepseek.py
+run_voyager_standard.py
+test_deepseek.py
+test_deepseek2.py
+config.json
+
+# test environment
 env_voyager_v2/
-global.json
-dotnet-install.sh
+
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
